--- a/pages/19886.html
+++ b/pages/19886.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -509,7 +509,7 @@ margin-left: 0em;
 <li><a href='#Statements'>Statements</a></li>
 <ul>
 <li><a href='#prelude_equivalence_to_the_infinite_configuration_space'>Prelude: Equivalence to the infinite configuration space</a></li>
-<li><a href='#stable_splittings'>Stable splittings</a></li>
+<li><a href='#StableSplittings'>Stable splitting of mapping spaces</a></li>
 <li><a href='#InTermsOfGoodwillieTowers'>In terms of Goodwillie-Taylor towers</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
@@ -523,7 +523,9 @@ margin-left: 0em;
 
 <h2 id="Definition">Definition</h2>
 
-<p>The following is not the most general definition that one may consider, instead it is streamlined to certain applications. See Remark <a class="maruku-ref" href="#ComparisonToNotationInLiterature"></a> below for comparison of notation used here to notation used elsewhere.</p>
+<p>The stable splitting of mapping spaces discussed <a href="#StableSplittings">below</a> have summands given by <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a>, or generalizations thereof. To be self-contained, we recall the relevant definitions here.</p>
+
+<p>The following Def. <a class="maruku-ref" href="#ConfigurationSpacesOfnPoints"></a> is not the most general definition of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> that one may consider in this context, instead it is streamlined to certain applications. See Remark <a class="maruku-ref" href="#ComparisonToNotationInLiterature"></a> below for comparison of notation used here to notation used elsewhere.</p>
 
 <div class="num_defn" id="ConfigurationSpacesOfnPoints">
 <h6 id="definition_2">Definition</h6>
@@ -741,7 +743,7 @@ margin-left: 0em;
 
 <p>(<a href="#Segal73">Segal 73, Theorem 3</a>)</p>
 
-<h3 id="stable_splittings">Stable splittings</h3>
+<h3 id="StableSplittings">Stable splitting of mapping spaces</h3>
 
 <div class="num_prop" id="StableSplittingOfMappingSpacesOutOfEuclideanSpace">
 <h6 id="proposition_2">Proposition</h6>
@@ -858,25 +860,36 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>is an <a class="existingWikiWord" href="/nlab/show/n-homogeneous+%28%E2%88%9E%2C1%29-functor">n-homogeneous (∞,1)-functor</a> in the sense of <a class="existingWikiWord" href="/nlab/show/Goodwillie+calculus">Goodwillie calculus</a>, and hence the partial <a class="existingWikiWord" href="/nlab/show/wedge+sums">wedge sums</a> as <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> ranges</p>
-<div class="maruku-equation" id="eq:IdentifyingTheGoodwillieTaylorStage"><span class="maruku-eq-number">(4)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Z</mi><mspace width="thickmathspace"></mspace><mo>↦</mo><mspace width="thickmathspace"></mspace><munder><mo lspace="thinmathspace" rspace="thinmathspace">⨁</mo><mrow><mi>k</mi><mo>∈</mo><mo stretchy="false">{</mo><mn>1</mn><mo>,</mo><mo>⋅</mo><mo>,</mo><mi>n</mi><mo stretchy="false">}</mo></mrow></munder><msup><mi>Σ</mi> <mn>∞</mn></msup><msub><mi>Conf</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><msub><mo>∧</mo> <mrow><mi>Σ</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></msub><msup><mi>Z</mi> <mrow><msub><mo>∧</mo> <mi>n</mi></msub></mrow></msup></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation" id="eq:IdentifyingTheGoodwillieTaylorStage"><span class="maruku-eq-number">(4)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Z</mi><mspace width="thickmathspace"></mspace><mo>↦</mo><mspace width="thickmathspace"></mspace><munder><mo lspace="thinmathspace" rspace="thinmathspace">⨁</mo><mrow><mi>k</mi><mo>∈</mo><mo stretchy="false">{</mo><mn>1</mn><mo>,</mo><mo>⋅</mo><mo>,</mo><mi>n</mi><mo stretchy="false">}</mo></mrow></munder><msup><mi>Σ</mi> <mn>∞</mn></msup><msub><mi>Conf</mi> <mi>k</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><msub><mo>∧</mo> <mrow><mi>Σ</mi><mo stretchy="false">(</mo><mi>k</mi><mo stretchy="false">)</mo></mrow></msub><msup><mi>Z</mi> <mrow><msub><mo>∧</mo> <mi>k</mi></msub></mrow></msup></mrow><annotation encoding="application/x-tex">
   
   Z 
     \;\mapsto\;
   \underset{k \in \{1, \cdot, n\}}{\bigoplus}
-  \Sigma^\infty Conf_n(X) \wedge_{\Sigma(n)} Z^{\wedge_n}
+  \Sigma^\infty Conf_k(X) \wedge_{\Sigma(k)} Z^{\wedge_k}
 
 </annotation></semantics></math></div>
-<p>are <a class="existingWikiWord" href="/nlab/show/n-excisive+%28%E2%88%9E%2C1%29-functors">n-excisive (∞,1)-functors</a>. Moreover, by the stable splitting of mapping spaces <a class="maruku-eqref" href="#eq:StableSplittingOfMappingSpacesOutOfSphere">(3)</a> of Prop. <a class="maruku-ref" href="#StableSplittingOfMappingSpacesOutOfEuclideanSpace"></a>, the canonical morphism</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>Maps</mi> <mi>cp</mi></msub><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>,</mo><msup><mi>Σ</mi> <mi>d</mi></msup><mi>Z</mi><mo stretchy="false">)</mo><mo>=</mo><msup><mi>Maps</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup><mo stretchy="false">(</mo><msup><mi>S</mi> <mi>d</mi></msup><mo>,</mo><msup><mi>Σ</mi> <mi>d</mi></msup><mi>Z</mi><mo stretchy="false">)</mo><mo>⟶</mo><munder><mo lspace="thinmathspace" rspace="thinmathspace">⨁</mo><mrow><mi>k</mi><mo>∈</mo><mo stretchy="false">{</mo><mn>1</mn><mo>,</mo><mo>⋅</mo><mo>,</mo><mi>n</mi><mo stretchy="false">}</mo></mrow></munder><msup><mi>Σ</mi> <mn>∞</mn></msup><msub><mi>Conf</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><msub><mo>∧</mo> <mrow><mi>Σ</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></msub><msup><mi>Z</mi> <mrow><msub><mo>∧</mo> <mi>n</mi></msub></mrow></msup></mrow><annotation encoding="application/x-tex">
-  Maps_{cp}(\mathbb{R}^d, \Sigma^d Z)
-  =
-  Maps^{\ast/}( S^d, \Sigma^d Z)
-  \longrightarrow
-  \underset{k \in \{1, \cdot, n\}}{\bigoplus}
-  \Sigma^\infty Conf_n(X) \wedge_{\Sigma(n)} Z^{\wedge_n}
+<p>are <a class="existingWikiWord" href="/nlab/show/n-excisive+%28%E2%88%9E%2C1%29-functors">n-excisive (∞,1)-functors</a>. Moreover, by the stable splitting of mapping spaces <a class="maruku-eqref" href="#eq:StableSplittingOfMappingSpacesOutOfSphere">(3)</a> of Prop. <a class="maruku-ref" href="#StableSplittingOfMappingSpacesOutOfEuclideanSpace"></a>, there is a <a class="existingWikiWord" href="/nlab/show/projection">projection</a> morphism onto the first <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/wedge+sum">wedge summands</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><msub><mi>Maps</mi> <mi>cp</mi></msub><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>,</mo><msup><mi>Σ</mi> <mi>d</mi></msup><mi>Z</mi><mo stretchy="false">)</mo></mtd> <mtd><mo>=</mo></mtd> <mtd><msup><mi>Maps</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup><mo stretchy="false">(</mo><msup><mi>S</mi> <mi>d</mi></msup><mo>,</mo><msup><mi>Σ</mi> <mi>d</mi></msup><mi>Z</mi><mo stretchy="false">)</mo></mtd> <mtd><mo>≃</mo></mtd> <mtd><munder><mo>⊕</mo><mrow><mi>k</mi><mo>∈</mo><mi>ℕ</mi></mrow></munder><msup><mi>Σ</mi> <mn>∞</mn></msup><msub><mi>Conf</mi> <mi>k</mi></msub><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo stretchy="false">)</mo><msub><mo>∧</mo> <mrow><mi>Σ</mi><mo stretchy="false">(</mo><mi>k</mi><mo stretchy="false">)</mo></mrow></msub><msup><mi>Z</mi> <mrow><msub><mo>∧</mo> <mi>k</mi></msub></mrow></msup></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo maxsize="1.8em" minsize="1.8em">↓</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><munder><mo lspace="thinmathspace" rspace="thinmathspace">⨁</mo><mrow><mi>k</mi><mo>∈</mo><mo stretchy="false">{</mo><mn>1</mn><mo>,</mo><mo>⋅</mo><mo>,</mo><mi>n</mi><mo stretchy="false">}</mo></mrow></munder><msup><mi>Σ</mi> <mn>∞</mn></msup><msub><mi>Conf</mi> <mi>k</mi></msub><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo stretchy="false">)</mo><msub><mo>∧</mo> <mrow><mi>Σ</mi><mo stretchy="false">(</mo><mi>k</mi><mo stretchy="false">)</mo></mrow></msub><msup><mi>Z</mi> <mrow><msub><mo>∧</mo> <mi>k</mi></msub></mrow></msup></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+  \array{
+    Maps_{cp}(\mathbb{R}^d, \Sigma^d Z)
+    &amp;=&amp;
+    Maps^{\ast/}( S^d, \Sigma^d Z)
+    &amp;\simeq&amp;
+    \underset{k \in \mathbb{N}}{\oplus} 
+      \Sigma^\infty Conf_k(\mathbb{R}^d) \wedge_{\Sigma(k)} Z^{\wedge_k}
+    \\
+    &amp;&amp;
+    &amp;&amp;
+    \Big\downarrow
+    \\
+    &amp;&amp;
+    &amp;&amp;
+     \underset{k \in \{1, \cdot, n\}}{\bigoplus}
+     \Sigma^\infty Conf_k( \mathbb{R}^d ) \wedge_{\Sigma(k)} Z^{\wedge_k}
+  }
 
 </annotation></semantics></math></div>
-<p>is <a class="existingWikiWord" href="/nlab/show/n-connected+morphism">(n+1)k-connected</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Z</mi></mrow><annotation encoding="application/x-tex">Z</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/n-connected+object">k-connected</a>.</p>
+<p>and this is <a class="existingWikiWord" href="/nlab/show/n-connected+morphism">(n+1)k-connected</a> when <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Z</mi></mrow><annotation encoding="application/x-tex">Z</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/n-connected+object">k-connected</a>.</p>
 
 <p>By <a class="existingWikiWord" href="/nlab/show/Goodwillie+calculus">Goodwillie calculus</a> this means that <a class="maruku-eqref" href="#eq:IdentifyingTheGoodwillieTaylorStage">(4)</a> are, up to <a class="existingWikiWord" href="/nlab/show/equivalence+in+an+%28infinity%2C1%29-category">equivalence</a>, the stages</p>
 <div class="maruku-equation" id="eq:TheGoodwillieStagesOfTheMappingSpaceFunctor"><span class="maruku-eq-number">(5)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>P</mi> <mi>n</mi></msub><msup><mi>Maps</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup><mo stretchy="false">(</mo><msup><mi>S</mi> <mi>d</mi></msup><mo>,</mo><msup><mi>Σ</mi> <mi>d</mi></msup><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>Z</mi><mo>↦</mo><munder><mo lspace="thinmathspace" rspace="thinmathspace">⨁</mo><mrow><mi>k</mi><mo>∈</mo><mo stretchy="false">{</mo><mn>1</mn><mo>,</mo><mo>⋅</mo><mo>,</mo><mi>n</mi><mo stretchy="false">}</mo></mrow></munder><msup><mi>Σ</mi> <mn>∞</mn></msup><msub><mi>Conf</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>Y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
@@ -955,14 +968,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  6, 2018 at 08:47:06.
+  Last revised on November  6, 2018 at 09:56:08.
   See the <a href="https://ncatlab.org/nlab/history/stable splitting of mapping spaces" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+splitting+of+mapping+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+splitting+of+mapping+spaces/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/stable+splitting+of+mapping+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+splitting+of+mapping+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+splitting+of+mapping+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+splitting+of+mapping+spaces/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/stable+splitting+of+mapping+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+splitting+of+mapping+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable splitting of mapping spaces/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
