--- a/pages/19920.html
+++ b/pages/19920.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Automath in nLab
+      Nicolaas de Bruijn in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Automath
+      Nicolaas de Bruijn
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9245/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,47 +311,33 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<h2 id="idea">Idea</h2>
-
-<p><em>Automath</em> was historically the first <a class="existingWikiWord" href="/nlab/show/logical+framework">logical framework</a>. The goal of the Automath project, initiated by <a class="existingWikiWord" href="/nlab/show/Dick+de+Bruijn">Dick de Bruijn</a>, was to provide a tool for the formalization of <a class="existingWikiWord" href="/nlab/show/mathematics">mathematics</a> without <a class="existingWikiWord" href="/nlab/show/foundations">foundational</a> prejudice.</p>
-
-<h2 id="references">References</h2>
+<p>Nicolaas Govert de Bruijn (known as Dick) was a Dutch mathematician, famous for the <a class="existingWikiWord" href="/nlab/show/Automath">Automath</a> project.</p>
 
 <ul>
-<li>
-<p><a href="http://www.win.tue.nl/automath/">The Automath Archive</a></p>
-</li>
-
-<li>
-<p><a href="https://cs.ru.nl/~freek/zfc-etc/">Automath Restaurant</a> has examples of different foundations of mathematics encoded in Automath.</p>
-</li>
-
-<li>
-<p><a href="http://www.cs.ru.nl/~freek/aut/"><code>aut</code></a> - An implementation in ANSI C.</p>
-</li>
+<li><a href="https://en.wikipedia.org/wiki/Nicolaas_Govert_de_Bruijn">Wikipedia</a></li>
 </ul>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/software">software</a></div></body></html>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  7, 2018 at 06:30:02.
-  See the <a href="https://ncatlab.org/nlab/history/Automath" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on November  7, 2018 at 06:28:27.
+  See the <a href="https://ncatlab.org/nlab/history/Nicolaas de Bruijn" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Automath" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Automath/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Automath" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Automath" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Automath/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Nicolaas+de+Bruijn" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Nicolaas de Bruijn/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Automath" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Nicolaas+de+Bruijn" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Automath" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Nicolaas+de+Bruijn" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Automath" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Nicolaas+de+Bruijn" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
