--- a/pages/1788.html
+++ b/pages/1788.html
@@ -541,20 +541,25 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>Hence 1-dimensional formal group laws over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> are equivalently <a class="existingWikiWord" href="/nlab/show/monoids">monoids</a> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Adic</mi><mi>R</mi><msup><mi>CAlg</mi> <mi>op</mi></msup></mrow><annotation encoding="application/x-tex">Adic R CAlg^{op}</annotation></semantics></math> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">[</mo><mo stretchy="false">[</mo><mi>x</mi><mo stretchy="false">]</mo><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">R[ [ x ] ]</annotation></semantics></math>.</p>
 </div>
-</body></html>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><semantics><annotation-xml encoding="SVG1.1">
+[[!include oriental &gt; Delta2]]
+</annotation-xml></semantics></mrow><annotation encoding="application/x-tex">\begin{svg}
+[[!include oriental &gt; Delta2]]
+\end{svg}
+</annotation></semantics></math></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  6, 2018 at 11:30:03.
+  Last revised on November  7, 2018 at 10:58:21.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1715" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1715 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1716" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1716 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
