--- a/pages/19905.html
+++ b/pages/19905.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9226/#Item_13" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9226/#Item_18" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1963,20 +1963,32 @@ margin-left: 0em;
 <ul>
 <li id="Kontsevich94"><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, pages 11-12 of <em>Feynman diagrams and low-dimensional topology</em>, First European Congress of Mathematics, 1992, Paris, vol. II, Progress in Mathematics <strong>120</strong>, Birkhäuser (1994), 97–121 (<a href="http://www.ihes.fr/~maxim/TEXTS/Feynman%20%20diagrams%20and%20low-dimensional%20topology.pdf">pdf</a>)</li>
 </ul>
+
+<p>and spelled out in more detail in</p>
+
+<ul>
+<li><a href="#Kontsevich99">Kontsevich 99, section 3</a></li>
+</ul>
+
+<p>with a careful proof being layed out in</p>
+
+<ul>
+<li><a href="#LambrechtsVolic14">Lambrechts-Volic 14</a></li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 06:37:44.
+  Last revised on November  7, 2018 at 10:07:54.
   See the <a href="https://ncatlab.org/nlab/history/Fulton-MacPherson operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Fulton-MacPherson operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
