--- a/pages/19881.html
+++ b/pages/19881.html
@@ -310,20 +310,22 @@ margin-left: 0em;
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body><div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
+<body>
+<p>TODO: Prove that the term model category with families has <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Π</mi></mrow><annotation encoding="application/x-tex">\Pi</annotation></semantics></math>-type structure.</p>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 05:53:09.
+  Last revised on November  8, 2018 at 02:30:56.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Term Model - Pi-types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+Term+Model+-+Pi-types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Term+Model+-+Pi-types/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Term+Model+-+Pi-types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Term+Model+-+Pi-types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+Term+Model+-+Pi-types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Term+Model+-+Pi-types/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Term+Model+-+Pi-types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Term+Model+-+Pi-types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - Term Model - Pi-types/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
