--- a/pages/19914.html
+++ b/pages/19914.html
@@ -1385,6 +1385,10 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, <a class="existingWikiWord" href="/nlab/show/Ismar+Voli%C4%87">Ismar Volić</a>, sections 6 and 7 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="https://arxiv.org/abs/0808.0457">arXiv:0808.0457</a>, <a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</p>
 </li>
 
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Alberto+Cattaneo">Alberto Cattaneo</a>, <a class="existingWikiWord" href="/nlab/show/Pavel+Mnev">Pavel Mnev</a>, <a class="existingWikiWord" href="/nlab/show/Nicolai+Reshetikhin">Nicolai Reshetikhin</a>, appendix B of <em>Perturbative quantum gauge theories on manifolds with boundary</em>, Communications in Mathematical Physics, January 2018, Volume 357, Issue 2, pp 631–730 (<a href="https://arxiv.org/abs/1507.01221">arXiv:1507.01221</a>, <a href="https://doi.org/10.1007/s00220-017-3031-6">doi:10.1007/s00220-017-3031-6</a>)</p>
+</li>
+
 <li id="CamposIdrissiLambrechtsWillwacher18">
 <p><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, Najib Idrissi, <a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>Configuration Spaces of Manifolds with Boundary</em> (<a href="https://arxiv.org/abs/1802.00716">arXiv:1802.00716</a>)</p>
 </li>
@@ -1395,14 +1399,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  6, 2018 at 02:57:11.
+  Last revised on November  8, 2018 at 03:26:57.
   See the <a href="https://ncatlab.org/nlab/history/Chern-Simons propagator" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Chern-Simons+propagator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Chern-Simons+propagator/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Chern-Simons+propagator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Chern-Simons+propagator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Chern-Simons+propagator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Chern-Simons+propagator/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Chern-Simons+propagator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Chern-Simons+propagator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Chern-Simons propagator/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
