--- a/pages/18070.html
+++ b/pages/18070.html
@@ -763,6 +763,7 @@ margin-left: 0em;
 <li><a href='#stable_splitting_of_mapping_spaces'>Stable splitting of mapping spaces</a></li>
 <li><a href='#ReferencesInGoodwillieCalculus'>In Goodwillie-calculus</a></li>
 <li><a href='#ReferencesCompactification'>Compactification</a></li>
+<li><a href='#cohomology_of_configuration_spaces'>Cohomology of configuration spaces</a></li>
 <li><a href='#cohomology_modeled_by_graph_complexes'>Cohomology modeled by graph complexes</a></li>
 </ul>
 </ul>
@@ -1243,9 +1244,29 @@ margin-left: 0em;
 
 <p>This underlies the models of configuration spaces by <a class="existingWikiWord" href="/nlab/show/graph+complexes">graph complexes</a>, see there for more.</p>
 
+<h3 id="cohomology_of_configuration_spaces">Cohomology of configuration spaces</h3>
+
+<p>{ReferencesCohomology}</p>
+
+<p>General discussion of <a class="existingWikiWord" href="/nlab/show/ordinary+homology">ordinary homology</a>/<a class="existingWikiWord" href="/nlab/show/ordinary+cohomology">ordinary cohomology</a> of configuration spaces of points includes</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Carl-Friedrich+B%C3%B6digheimer">Carl-Friedrich Bödigheimer</a>, F. Cohen, L. Taylor, <em>On the homology of configuration spaces</em>, Topology Vol. 28 No. 1, p. 111-123 1989 (<a href="https://core.ac.uk/download/pdf/82124359.pdf">pdf</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Ben+Knudsen">Ben Knudsen</a>, <em>Betti numbers and stability for configuration spaces via factorization homology</em>, Algebr. Geom. Topol. 17 (2017) 3137-3187 (<a href="https://arxiv.org/abs/1405.6696">arXiv:1405.6696</a>)</p>
+</li>
+
+<li>
+<p>Christoph Schiessl, <em>Cohomology of Configuration Spaces</em> (<a href="https://people.math.ethz.ch/~cschiess/thesis.pdf">pdf</a>)</p>
+</li>
+</ul>
+
 <h3 id="cohomology_modeled_by_graph_complexes">Cohomology modeled by graph complexes</h3>
 
-<p>That the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of (the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactification">Fulton-MacPherson compactification</a> of) configuration spaces of points may be modeled by <a class="existingWikiWord" href="/nlab/show/graph+complexes">graph complexes</a> (exhibiting <span class="newWikiWord">formality of the little n-disk operads<a href="/nlab/new/formality+of+the+little+n-disk+operads">?</a></span>) is due to</p>
+<p>That the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of (the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactification">Fulton-MacPherson compactification</a> of) configuration spaces of points may be modeled by <a class="existingWikiWord" href="/nlab/show/graph+complexes">graph complexes</a> (exhibiting <a class="existingWikiWord" href="/nlab/show/formality+of+the+little+n-disk+operad">formality of the little n-disk operad</a>) is due to</p>
 
 <ul>
 <li id="Kontsevich99b"><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, around Def. 15 and Lemma 3 in <em>Operads and Motives in Deformation Quantization</em>, Lett.Math.Phys.48:35-72,1999 (<a href="https://arxiv.org/abs/math/9904055">arXiv:math/9904055</a>)</li>
@@ -1278,14 +1299,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 08:48:02.
+  Last revised on November  8, 2018 at 03:55:35.
   See the <a href="https://ncatlab.org/nlab/history/configuration space of points" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space of points/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
