--- a/pages/15269.html
+++ b/pages/15269.html
@@ -891,7 +891,7 @@ margin-left: 0em;
 <p>Literature collection</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em><a href="homepages.warwick.ac.uk/staff/Miles.Reid/McKay/">Links to papers on McKay correspondence</a></em></li>
+<li><a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em><a href="http://homepages.warwick.ac.uk/staff/Miles.Reid/McKay/">Links to papers on McKay correspondence</a></em></li>
 </ul>
 
 <p>As an isomorphism between the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> and the plain <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of its <a href="ADE+singularity#ResolutionBySpheresTouchingAlongADynkinDiagram">resolution</a>, the McKay correspondence is proven in:</p>
@@ -911,14 +911,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  9, 2018 at 13:59:44.
+  Last revised on November  8, 2018 at 06:20:35.
   See the <a href="https://ncatlab.org/nlab/history/McKay correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/McKay correspondence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
