--- a/pages/19924.html
+++ b/pages/19924.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Kasper Peeters in nLab
+      Marija Zamaklar in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Kasper Peeters
+      Marija Zamaklar
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9251/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -312,7 +312,7 @@ margin-left: 0em;
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <ul>
-<li><a href="http://maths.dur.ac.uk/users/kasper.peeters/">webpage</a></li>
+<li><a href="https://www.dur.ac.uk/research/directory/staff/?mode=staff&amp;id=5081">webpage</a></li>
 </ul>
 
 <h2 id="selected_writings">selected writings</h2>
@@ -331,10 +331,6 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/lattice+gauge+theory">lattice gauge theory</a></p>
 </li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></p>
-</li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
@@ -342,22 +338,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 08:56:09.
-  See the <a href="https://ncatlab.org/nlab/history/Kasper Peeters" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on November  8, 2018 at 08:54:58.
+  See the <a href="https://ncatlab.org/nlab/history/Marija Zamaklar" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Kasper+Peeters" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kasper+Peeters/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Kasper+Peeters" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kasper+Peeters" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Kasper Peeters/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Marija+Zamaklar" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Marija Zamaklar/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Kasper+Peeters" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Marija+Zamaklar" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Kasper+Peeters" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Marija+Zamaklar" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Kasper+Peeters" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Marija+Zamaklar" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
