--- a/pages/18905.html
+++ b/pages/18905.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -761,10 +761,15 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#thermal_quantum_field_theory_via_periodic_euclidean_time'>Thermal quantum field theory via periodic Euclidean time</a></li>
+</ul>
 <li><a href='#properties'>Properties</a></li>
 <ul>
 <li><a href='#wick_rotation'>Wick rotation</a></li>
 </ul>
+<li><a href='#examples'>Examples</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -772,7 +777,36 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
+<h3 id="general">General</h3>
+
 <p>In <a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a> one speaks of <em>Euclidean field theory</em> if the underlying <a class="existingWikiWord" href="/nlab/show/spaces">spaces</a> on which the <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">fields</a> are defined are <a class="existingWikiWord" href="/nlab/show/Riemannian+manifolds">Riemannian manifolds</a>, as opposed to <a class="existingWikiWord" href="/nlab/show/Lorentzian+manifold">Lorentzian</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> used in <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a>. Hence in Euclidean field theory there is no “<a class="existingWikiWord" href="/nlab/show/time">time</a>”, one may understand this as essentially being <a class="existingWikiWord" href="/nlab/show/statistical+mechanics">statistical mechanics</a>.</p>
+
+<h3 id="thermal_quantum_field_theory_via_periodic_euclidean_time">Thermal quantum field theory via periodic Euclidean time</h3>
+
+<p>The equal-time <a class="existingWikiWord" href="/nlab/show/n-point+functions">n-point functions</a> in <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a> on <a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^{d,1}</annotation></semantics></math> in a <a class="existingWikiWord" href="/nlab/show/vacuum+state">vacuum state</a> reflecting equilibrium at <a class="existingWikiWord" href="/nlab/show/finite+number">finite</a> <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi></mrow><annotation encoding="application/x-tex">T</annotation></semantics></math> may be argued to be computed equivalently by Euclidean field theory on the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^d \times S^1</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/Euclidean+space">Euclidean space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>d</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^d</annotation></semantics></math> with a <a class="existingWikiWord" href="/nlab/show/circle">circle</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">S^1</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/length">circumference</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math> (e.g. <a href="#Moore03">Moore 03, section 1.1</a>):</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><munder><munder><mrow><msub><mrow><mo>⟨</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mo>:</mo><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup><mo>,</mo><mi>T</mi></mrow></msub></mrow><mo>⏟</mo></munder><mfrac linethickness="0"><mrow><mrow><mtext>on Minkowski spacetime</mtext><mspace width="thinmathspace"></mspace><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow></mrow><mrow><mrow><mtext>at finite temperature</mtext><mspace width="thinmathspace"></mspace><mi>T</mi></mrow></mrow></mfrac></munder><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><munder><munder><mrow><msub><mrow><mo>⟨</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo>:</mo><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mrow></msub></mrow><mo>⏟</mo></munder><mfrac linethickness="0"><mrow><mrow><mtext>on Euclidean space</mtext><mspace width="thinmathspace"></mspace><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msup><mi>S</mi> <mn>1</mn></msup></mrow></mrow><mrow><mrow><mtext>with circle of circumference</mtext><mspace width="thinmathspace"></mspace><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow></mrow></mfrac></munder></mrow><annotation encoding="application/x-tex">
+  \underset{
+    {\text{on Minkowski spacetime}\, \mathbb{R}^{d,1}}
+    \atop
+    {\text{at finite temperature}\, T}
+  }{
+  \underbrace{
+    \left\langle  :\mathbf{\Phi}(x_1,t) \mathbf{\Phi}(x_2,t) \cdots \mathbf{\Phi}(x_n,t) : \right\rangle_{\mathbb{R}^{d,1}, T}
+  }}
+  \;=\;
+  \underset{
+    {\text{on Euclidean space}\, \mathbb{R}^{d} \times S^1}
+    \atop
+    {\text{with circle of circumference}\, \beta \coloneqq 1/T}   
+  }{
+  \underbrace{
+  \left\langle  :\mathbf{\Phi}(x_1) \mathbf{\Phi}(x_2) \cdots \mathbf{\Phi}(x_n) : \right\rangle_{\mathbb{R}^{d} \times S^1_{\beta}}
+  }}
+
+</annotation></semantics></math></div>
+<p>This perspective is known as <em><a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a></em> or similar, the use of a “periodic Euclidean time coordinate” is also known as <em><a class="existingWikiWord" href="/nlab/show/Matsubara+formalism">Matsubara formalism</a></em> and specifically the condition that the periodicity has to be <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math> is known as the <em><a class="existingWikiWord" href="/nlab/show/KMS+conditions">KMS conditions</a></em>.</p>
+
+<p>(e.g. <a href="#Thoma00">Thoma 00, section 2.2</a>, <a href="#PeetersZamaklar09">Peeters-Zamaklar 09, section 1.3</a>)</p>
 
 <h2 id="properties">Properties</h2>
 
@@ -780,9 +814,19 @@ margin-left: 0em;
 
 <p>In good situations <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a> relates Euclidean field theory with <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a>.</p>
 
+<h2 id="examples">Examples</h2>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Ising+model">Ising model</a></li>
+</ul>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a></p>
+</li>
+
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a></p>
 </li>
@@ -794,8 +838,48 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>General</p>
+
 <ul>
 <li id="PeetersZamaklar09"><a class="existingWikiWord" href="/nlab/show/Kasper+Peeters">Kasper Peeters</a>, <a class="existingWikiWord" href="/nlab/show/Marija+Zamaklar">Marija Zamaklar</a>, <em>Euclidean Field Theory</em>, Lecture notes 2009-2011 (<a href="http://maths.dur.ac.uk/users/kasper.peeters/eft.html">web</a>, <a href="http://maths.dur.ac.uk/users/kasper.peeters/pdf/eft.pdf">pdf</a>)</li>
+</ul>
+
+<p>On thermal quantum field theory:</p>
+
+<ul>
+<li id="Thoma00">
+<p>Markus H. Thoma, <em>New Developments and Applications of Thermal Field Theory</em> (<a href="https://arxiv.org/abs/hep-ph/0010164">arXiv:hep-ph/0010164</a>)</p>
+</li>
+
+<li>
+<p>Christian D. Jäkel, <em>The Reeh–Schlieder property for thermal field theories</em>, Journal of Mathematical Physics 41, 1745 2000 (<a href="https://doi.org/10.1063/1.533208">doi:10.1063/1.533208</a>)</p>
+</li>
+
+<li id="JaehelRobl11">
+<p>Christian D. Jäkel, Florian Robl, <em>The relativistic KMS condition for the thermal <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-point functions of the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>P</mi><mo stretchy="false">(</mo><mi>ϕ</mi><msub><mo stretchy="false">)</mo> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">P(\phi)_2</annotation></semantics></math> model</em> (<a href="https://arxiv.org/abs/1103.3609">arXiv:1103.3609</a>)</p>
+</li>
+</ul>
+
+<p>With an eye towards <a class="existingWikiWord" href="/nlab/show/lattice+gauge+theory">lattice gauge theory</a>:</p>
+
+<ul>
+<li id="Moore03">Guy Moore, <em>Informal lectures on lattice gauge theory</em>, 2003 (<a href="https://theorie.ikp.physik.tu-darmstadt.de/qcd/moore/latt_lectures.pdf">pdf</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Thermal_quantum_field_theory">Thermal quantum field theory</a></em></p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Matsubara_frequency">Matsubara frequency</a></em></p>
+</li>
+
+<li>
+<p>Wolfram Math World, <em><a href="http://mathworld.wolfram.com/KMSCondition.html">KMS condition</a></em></p>
+</li>
 </ul>
 </body></html>
 
@@ -803,7 +887,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 08:52:27.
+  Last revised on November  8, 2018 at 09:51:55.
   See the <a href="https://ncatlab.org/nlab/history/Euclidean field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
