--- a/pages/9961.html
+++ b/pages/9961.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -908,7 +908,7 @@ margin-left: 0em;
 
 <p>Lattice gauge theory is a <a class="existingWikiWord" href="/nlab/show/computation">computational</a> model for <a class="existingWikiWord" href="/nlab/show/gauge+theory">gauge theory</a> (<a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>).</p>
 
-<p>These are numerical simulation of <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotated</a> <a class="existingWikiWord" href="/nlab/show/non-perturbative+quantum+field+theory">non-perturbative QCD</a> obtained by discretizing the Euclidean <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> to a <em>lattice</em> <a class="existingWikiWord" href="/nlab/show/graph">graph</a> of <a class="existingWikiWord" href="/nlab/show/vertices">vertices</a> and <a class="existingWikiWord" href="/nlab/show/edges">edges</a> between them, regarding the <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a> as a function on the <a class="existingWikiWord" href="/nlab/show/edges">edges</a> (assigning to an edge the <a class="existingWikiWord" href="/nlab/show/holonomy">holonomy</a>/<a class="existingWikiWord" href="/nlab/show/parallel+transport">parallel transport</a> of the gauge field) and then explicitly evaluating the would-be <a class="existingWikiWord" href="/nlab/show/path+integral">path integral</a> of the <a class="existingWikiWord" href="/nlab/show/Yang-Mills+action">Yang-Mills action</a> over these field configurations as an approximate numerical sum.</p>
+<p>These are numerical simulation of <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotated</a> <a class="existingWikiWord" href="/nlab/show/non-perturbative+quantum+field+theory">non-perturbative QCD</a> obtained by discretizing the <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean spacetime</a> to a <em>lattice</em> <a class="existingWikiWord" href="/nlab/show/graph">graph</a> of <a class="existingWikiWord" href="/nlab/show/vertices">vertices</a> and <a class="existingWikiWord" href="/nlab/show/edges">edges</a> between them, regarding the <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a> as a function on the <a class="existingWikiWord" href="/nlab/show/edges">edges</a> (assigning to an edge the <a class="existingWikiWord" href="/nlab/show/holonomy">holonomy</a>/<a class="existingWikiWord" href="/nlab/show/parallel+transport">parallel transport</a> of the gauge field) and then explicitly evaluating the would-be <a class="existingWikiWord" href="/nlab/show/path+integral">path integral</a> of the <a class="existingWikiWord" href="/nlab/show/Yang-Mills+action">Yang-Mills action</a> over these field configurations as an approximate numerical sum.</p>
 
 <p>Specifically for <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> this is also called <em>lattice QCD</em>, etc.</p>
 
@@ -1033,14 +1033,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 08:53:28.
+  Last revised on November  8, 2018 at 09:39:13.
   See the <a href="https://ncatlab.org/nlab/history/lattice gauge theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/lattice+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lattice+gauge+theory/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/lattice+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lattice+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/lattice+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lattice+gauge+theory/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/lattice+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lattice+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/lattice gauge theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
