--- a/pages/4465.html
+++ b/pages/4465.html
@@ -1048,7 +1048,24 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#properties">Properties</a><ul><li><a href="#interpretation_in_adscft_correspondence">Interpretation in AdS/CFT correspondence</a></li><li><a href="#interpretation_by_strong_coupling_limit_of_dbranes">Interpretation by strong coupling limit of D-branes</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#References">References</a><ul><li><a href="#ReferencesGeneral">General</a></li><li><a href="#interpretation_in_string_theory">Interpretation in string theory</a></li><li><a href="#interpretation_as_entanglement_entropy">Interpretation as entanglement entropy</a></li></ul></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#interpretation_in_adscft_correspondence'>Interpretation in AdS/CFT correspondence</a></li>
+<li><a href='#interpretation_by_strong_coupling_limit_of_dbranes'>Interpretation by strong coupling limit of D-branes</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#References'>References</a></li>
+<ul>
+<li><a href='#ReferencesGeneral'>General</a></li>
+<li><a href='#interpretation_in_string_theory'>Interpretation in string theory</a></li>
+<li><a href='#interpretation_as_entanglement_entropy'>Interpretation as entanglement entropy</a></li>
+</ul>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>In <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <strong>Bekenstein-Hawking entropy</strong> is an <a class="existingWikiWord" href="/nlab/show/entropy">entropy</a> assigned to <a class="existingWikiWord" href="/nlab/show/black+hole">black hole</a>, on the basis of laws of thermodynamics and observers outside black hole. It striking property is that it is proportional to the surface area of the balck hole’s <a class="existingWikiWord" href="/nlab/show/horizon">horizon</a>.</p>
@@ -1105,11 +1122,21 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a></p>
+</li>
 </ul>
 
 <h2 id="References">References</h2>
 
 <h3 id="ReferencesGeneral">General</h3>
+
+<p>A textbook account is</p>
+
+<ul>
+<li id="FrolovZelnikov11"><a class="existingWikiWord" href="/nlab/show/Valeri+Frolov">Valeri Frolov</a>, Andrei Zelnikov, <em>Introduction to black hole physics</em>, Oxford 2011</li>
+</ul>
 
 <p>Basic introductory accounts include</p>
 
@@ -1226,14 +1253,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  6, 2018 at 02:58:50.
+  Last revised on November  8, 2018 at 11:19:52.
   See the <a href="https://ncatlab.org/nlab/history/Bekenstein-Hawking entropy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bekenstein-Hawking+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bekenstein-Hawking+entropy/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Bekenstein-Hawking+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bekenstein-Hawking+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bekenstein-Hawking+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bekenstein-Hawking+entropy/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/Bekenstein-Hawking+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bekenstein-Hawking+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bekenstein-Hawking entropy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
