--- a/pages/18905.html
+++ b/pages/18905.html
@@ -317,7 +317,15 @@ margin-left: 0em;
 
 <h4 id="algebraic_quantum_field_theory">Algebraic Quantum Field Theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>: <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
+<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>:</p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic</a>, <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean</a>, <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal</a></p>
+</li>
+</ul><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
 
@@ -806,9 +814,9 @@ margin-left: 0em;
   }}
 
 </annotation></semantics></math></div>
-<p>(see e.g. <a href="#Moore03">Moore 03, section 1.1</a> for the quick informal <a class="existingWikiWord" href="/nlab/show/path+integral">path integral</a>-idea and see <a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, section 2</a> for a careful discussion in the case of 2-point functions).</p>
+<p>(see e.g. <a href="#Moore03">Moore 03, section 1.1</a> for the quick informal <a class="existingWikiWord" href="/nlab/show/path+integral">path integral</a>-idea and see <a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, section 2, (2.50)</a> for a careful discussion).</p>
 
-<p>This perspective is known as <em><a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a></em> or similar, the use of a “periodic Euclidean time coordinate” is also known as <em><a class="existingWikiWord" href="/nlab/show/Matsubara+formalism">Matsubara formalism</a></em> (e.g. <a href="#LandsmanVanWert87">Landsman-vanWert 87, section 2.3.1</a>) and specifically the condition that the periodicity has to be <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math> is known as the <em><a class="existingWikiWord" href="/nlab/show/KMS+conditions">KMS conditions</a></em> (For <em>Kubo-Martin-Schwinger</em>, due to <a href="#Kubo57">Kubo 57</a>, <a href="#MartinSchwinger59">Martin-Schwinger 59</a> with its final form due to<a href="#HaagHugenholtzWinnink67">Haag-Hugenholtz-Winnink 67</a>).</p>
+<p>This perspective is known as <em><a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a></em> or similar, the use of a “periodic Euclidean time coordinate” is also known as <em><a class="existingWikiWord" href="/nlab/show/Matsubara+formalism">Matsubara formalism</a></em> (e.g. <a href="#LandsmanVanWert87">Landsman-vanWert 87, section 2.3.1</a>) and specifically the condition that the periodicity has to be <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math> is known as the <em><a class="existingWikiWord" href="/nlab/show/KMS+conditions">KMS conditions</a></em> (For <em>Kubo-Martin-Schwinger</em>, due to <a href="#Kubo57">Kubo 57</a>, <a href="#MartinSchwinger59">Martin-Schwinger 59</a> with its final form due to <a href="#HaagHugenholtzWinnink67">Haag-Hugenholtz-Winnink 67</a>, see <a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, section 3.1</a>).</p>
 
 <p>(e.g. <a href="#Thoma00">Thoma 00, section 2.2</a>, <a href="#PeetersZamaklar09">Peeters-Zamaklar 09, section 1.3</a>)</p>
 <center>
@@ -877,6 +885,10 @@ margin-left: 0em;
 <p>Review includes</p>
 
 <ul>
+<li>
+<p><a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, sections 2 and 3</a></p>
+</li>
+
 <li id="LandsmanVanWert87">
 <p><a class="existingWikiWord" href="/nlab/show/Klaas+Landsman">Klaas Landsman</a>, Ch.G.van Weert, <em>Real- and imaginary-time field theory at finite temperature and density</em>, Physics Reports Volume 145, Issues 3–4, January 1987, Pages 141-249 (<a href="https://doi.org/10.1016/0370-1573(87)90121-9">doi:10.1016/0370-1573(87)90121-9</a>)</p>
 </li>
@@ -953,7 +965,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 13:49:01.
+  Last revised on November  8, 2018 at 14:34:08.
   See the <a href="https://ncatlab.org/nlab/history/Euclidean field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
