--- a/pages/3633.html
+++ b/pages/3633.html
@@ -317,7 +317,15 @@ margin-left: 0em;
 
 <h4 id="algebraic_quantum_field_theory">Algebraic Quantum Field Theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>: <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
+<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>:</p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic</a>, <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean</a>, <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal</a></p>
+</li>
+</ul><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
 
@@ -1391,20 +1399,26 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>The Feynman <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>i</mi><mi>ϵ</mi></mrow><annotation encoding="application/x-tex">i \epsilon</annotation></semantics></math> in String Theory</em> (<a href="http://arxiv.org/abs/1307.5124">arXiv:1307.5124</a>)</p>
 </li>
 </ul>
+
+<p>For relation to <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a> see</p>
+
+<ul>
+<li id="FullingRuijsenaars87">S.A. Fulling, S.N.M. Ruijsenaars, <em>Temperature, periodicity and horizons</em>, Physics Reports Volume 152, Issue 3, August 1987, Pages 135-176 (<a href="https://www1.maths.leeds.ac.uk/~siru/papers/p26.pdf">pdf</a>, <a href="https://doi.org/10.1016/0370-1573(87)90136-0">doi:10.1016/0370-1573(87)90136-0</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 08:47:24.
+  Last revised on November  8, 2018 at 14:13:37.
   See the <a href="https://ncatlab.org/nlab/history/Wick rotation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wick+rotation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wick+rotation/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/Wick+rotation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wick+rotation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Wick+rotation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wick+rotation/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/Wick+rotation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wick+rotation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Wick rotation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
